# picoports

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  debugprobe.cmake
.github/workflows/: build.yml  pull-request.yml  release.yml
docs/: dev_setup.md  updating_debugprobe.md  usage_adc.md  usage_gpio.md  usage_i2c.md  usage_swd.md  usage_uart.md
docs/img/: .gitignore  pad.sh
src/: dln2.h  main.c  main.h  pp_adc.c  pp_adc.h  pp_gpio.c  pp_i2c.c  pp_uart.c  tusb_config.h  usb_descriptors.c
